# licensepy

./: .gitignore  Cargo.toml  LICENSE  Package.py  ProjectLicense.py  README.md  main.py  pretty_string.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: automate_release_and_publish.yaml  rust-ci.yaml
snap/: snapcraft.yaml
src/: Package.py  ProjectLicense.py  argparse.rs  check.rs  format.rs  licensepy.py  licensepy.rs  main.rs  metadata.rs  print_output.rs  pylicense.py  utils.rs
