[package]
name = "licensepy"
version = "1.0.1"
authors = ["Nathnael (Nati) Bekele nwtbekele@gmail.com"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/natibek/licensepy"
license = "Apache 2.0"

[[bin]]
name = "licensepy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
toml = "0.8.20"
colored = "3.0.0"
clap = { version = "4.5.31", features = ["derive"] }
pyo3 = { version = "0.23.5", features = ["extension-module"] }
chrono = "0.4.41"
rayon = "1.10.0"
