[package]
name = "licensepy"
version = "1.1.1"
authors = ["Nathnael (Nati) Bekele nwtbekele@gmail.com"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/natibek/licensepy"
license = "Apache 2.0"

[[bin]]
name = "licensepy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
toml = "0.9.5"
colored = "3.0.0"
clap = { version = "4.5.43", features = ["derive"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }
chrono = "0.4.41"
rayon = "1.10.0"
log = "0.4"
env_logger = "0.11"
tempfile = "3.20.0"
