[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "licensepy"
version = "1.1.1"
description = "A Rust CLI packaged for Python project dependency license check and license header formatting."
readme = "README.md"
authors = [{ name = "Nathnael Bekele", email = "nwtbekele@gmail.com" }]
maintainers = [{ name = "Nathnael (Nati) Bekele" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "license",
    "license header",
    "license header formatter",
    "license check",
    "project dependency",
]
classifiers = [
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/natibek/licensepy"
Repository = "https://github.com/natibek/licensepy"
Issues = "https://github.com/natibek/licensepy/issues"
Readme = "https://github.com/natibek/licensepy/blob/main/README.md"
Changelog = "https://github.com/natibek/licensepy/blob/main/CHANGELOG"

[tool.maturin]
bindings = "bin"

[tool.licensepy]
license_header_template = """Copyright of Nati."""
